# python-project-template

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: changelog.md  dev_notes.md  user_guide.md
examples/: use_tools_and_utils.py
notes/: note1.md  note2.md  note3.md
src/mytools/: __init__.py  tool1.py  tool2.py
src/mytools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/myutils/: __init__.py  utils1.py  utils2.py
tests/: test_tools.py  test_utils.py
